--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
 <br><span class="desc">Безделушки, которые являются не тем, чем кажутся на первый взгляд.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/graves.html">Надгробья</a>
 <br><span class="desc">Разнообразные могилы и надгробья для прогулок по кладбищам.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/frost-covered_trinkets.html">Северные безделушки</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=grave" class="tag c3">grave</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/frost-covered_trinkets.html">Северные безделушки</a>
 <br><span class="desc">Если сюжет разворачивается в диких северных землях, скованных морозом и пронизанных ледяным ветром, героям могут попасться какие-нибудь из этих безделушек.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li></ul><h3>Артефакты</h3><ul class="tagable noBullets"><li><a href="/archive/tables/magicitemsDnD.html">Случайные магические вещи</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/100_grave_things.html">Что можно найти в могиле</a>
+<br><span class="desc">Если крысы в подвалах таверны оказались слишком живучими, а лут собрать хочется, можно заняться грабежем могил. Конечно, это осуждается большинством народов, да и найти можно совсем не то, что ожидал... На свой страх и риск можно попробовать раскопать пару могил и вскрыть несколько склепов. К чему это приведет?..</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=grave" class="tag c3">grave</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li></ul><h3>Артефакты</h3><ul class="tagable noBullets"><li><a href="/archive/tables/magicitemsDnD.html">Случайные магические вещи</a>
 <br><span class="desc">Несколько таблиц по d100 предметов, которые могут попасться в очередном ссокровище или в магической лавке ближайшего городка.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonMasterGuide" class="tag c4">DungeonMasterGuide</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=artifact" class="tag c6">artifact</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li></ul><h3>Сокровища</h3><ul class="tagable noBullets"><li><a href="/archive/tables/unictreasure.html">Уникальные сокровища</a>
 <br><span class="desc">Иногда приключенцам попадаются поистине уникальные вещи. Вот d100 таких вариантов.</span>
@@ -285,7 +287,7 @@
 	<div id="footer">		
 		<div class="max_width">
 			<div class="flex_container">
-				<div class="flex_footer vk_placeholder">
+				<div class="flex_footer vk_placeholder flex_left">
 					<div class="padding">
 						<script type="text/javascript" src="//vk.com/js/api/openapi.js?142" async defer></script>
 
@@ -296,7 +298,7 @@
 							<!-- </script> -->
 					</div>
 				</div>
-				<div class="flex_footer">
+				<div class="flex_footer flex_right">
 					<div class="padding">
 						<ul class="links">
 							<li>
@@ -319,14 +321,14 @@
 						</p>						
 					</div>					
 				</div>
-				<div class="flex_footer">
+				<div class="flex_footer flex_left" style="max-width: 26rem;">
 					<div class="padding">
 						<h4>Карта ролевых клубов РФ и ближайших галактик</h4>
 						<a href="http://ролевыеклубы.рф"><i class="fa fa-map-marker"></i> РолевыеКлубы.рф</a>
 					</div> 
 					
 				</div>
-				<div class="flex_footer">
+				<div class="flex_footer flex_right">
 					
 					<div class="padding">						
 						<p class="greed">
