--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/100_grave_things.html">Что можно найти в могиле</a>
 <br><span class="desc">Если крысы в подвалах таверны оказались слишком живучими, а лут собрать хочется, можно заняться грабежем могил. Конечно, это осуждается большинством народов, да и найти можно совсем не то, что ожидал... На свой страх и риск можно попробовать раскопать пару могил и вскрыть несколько склепов. К чему это приведет?..</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=grave" class="tag c3">grave</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/random_potions.html">Случайные зелья</a>
-<br><span class="desc">Если нужно быстро придумать зелье, поможет это твнушительный набор таблиц. Мастер может использовать их, чтобы набросать уникальное зелье, которое он даст группе. А игрок может воспользоваться таблицами, когда его персонаж создает зелья. </span>
+<br><span class="desc">Если нужно быстро придумать зелье, поможет этот внушительный набор таблиц. Мастер может использовать их, чтобы набросать уникальное зелье, которое он даст группе. А игрок может воспользоваться таблицами, когда его персонаж создает зелья. </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=potions" class="tag c0">potions</a></p></li></ul><h3>Артефакты</h3><ul class="tagable noBullets"><li><a href="/archive/tables/magicitemsDnD.html">Случайные магические вещи</a>
 <br><span class="desc">Несколько таблиц по d100 предметов, которые могут попасться в очередном ссокровище или в магической лавке ближайшего городка.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonMasterGuide" class="tag c4">DungeonMasterGuide</a> <a href="/archive#q=magic" class="tag c3">magic</a> <a href="/archive#q=artifact" class="tag c6">artifact</a> <a href="/archive#q=things" class="tag c3">things</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/useless_magic_items.html">Бесполезные магические предметы</a>
@@ -174,7 +174,7 @@
 <br><span class="desc"> Разбитые окна, темные переулки, подозрительные личности, шныряющие туда-сюда... А туда ли завернула группа приключенцев? Впрочем, бывают места и похуже.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=History" class="tag c4">History</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/village_festivals.html">Деревенские праздники</a>
 <br><span class="desc">Придя в далекую деревушку можно очутиться посреди веселого праздника или таинственного фестиваля. Вот d20 вариантов таких событий.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=History" class="tag c4">History</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/randon_festivals.html">Случайные праздники</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=History" class="tag c4">History</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/random_festivals.html">Случайные праздники</a>
 <br><span class="desc">Несколько таблиц, на основе которых можно придумать праздник или другое подобное событие. <br>Если нужно придумать некое событие, а фантазия буксует, воспользуйтесь этими таблицами. Комбинация из вида праздника, основного занятия и чему праздник посвящен может помочь придумать необычный праздник или даже пир во время чумы.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Festival" class="tag c0">Festival</a> <a href="/archive#q=Event" class="tag c4">Event</a></p></li><li><a href="/archive/tables/roadside_encounters.html">События в дороге</a>
 <br><span class="desc">Так как в игре скорее всего будет достаточно запланированных боевых столкновений, то в пути, кроме обычных стычек, стоит уделить внимание событиям, добавляющим глубины кампании. </span>
@@ -279,6 +279,8 @@
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
+<li><a href="archive/other/Fate_Core_rules.html">Правила Fate Core в комиксах</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=FateCore" class="tag c7">FateCore</a></p></li>
 <li><a href="archive/other/blind_pirate_team.html">Слепая команда</a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/choose_dnd5_class.html">Выбери свой класс</a>
@@ -289,8 +291,8 @@
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/Eye_of_Questions.html">Глаз вопросов</a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
-<li><a href="archive/other/Fate_Core_rules.html">Правила Fate Core в комиксах</a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=FateCore" class="tag c7">FateCore</a></p></li>
+<li><a href="archive/other/blue_dragon.html">Синий дракон</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/glowing_rock.html">Необычный камень</a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/illusory_meadow.html">Иллюзорная поляна</a>
@@ -299,6 +301,8 @@
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DnD5" class="tag c9">DnD5</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Palladin" class="tag c5">Palladin</a></p></li>
 <li><a href="archive/other/Sirilion_city.html">Город Сирилион</a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Map" class="tag c6">Map</a> <a href="/archive#q=City" class="tag c9">City</a></p></li>
+<li><a href="archive/other/special_rock.html">Обычный камень</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 </ul>
 </article></div>
 			<div id="sidebar">		
