--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
 <li><a href="archive/other/Sirilion_city.html">Город Сирилион<span class="date" style="float: right">25.06.2017</span></a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Map" class="tag c6">Map</a> <a href="/archive#q=City" class="tag c9">City</a></p></li>
 <li><a href="archive/other/Fate_Core_rules.html">Правила Fate Core в комиксах<span class="date" style="float: right">25.08.2017</span></a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=FateCore" class="tag c7">FateCore</a></p></li>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=FateCore" class="tag c7">FateCore</a> <a href="/archive#q=Comics" class="tag c6">Comics</a></p></li>
 <li><a href="archive/other/Eye_of_Questions.html">Глаз вопросов<span class="date" style="float: right">08.09.2017</span></a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a></p></li>
 <li><a href="archive/other/blind_pirate_team.html">Слепая команда<span class="date" style="float: right">10.09.2017</span></a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/illusory_meadow.html">Иллюзорная поляна<span class="date" style="float: right">10.09.2017</span></a>
@@ -298,17 +298,36 @@
 <li><a href="archive/other/DnD_outcasts.html">Старое доброе ДнД<span class="date" style="float: right">05.10.2017</span></a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DungeonsAndDragons" class="tag c8">DungeonsAndDragons</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/glowing_rock.html">Необычный камень<span class="date" style="float: right">18.06.2018</span></a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a></p></li>
 <li><a href="archive/other/blue_dragon.html">Синий дракон<span class="date" style="float: right">18.07.2018</span></a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/special_rock.html">Обычный камень<span class="date" style="float: right">26.07.2018</span></a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
-<li><a href="archive/other/comics_meduse.html">Медуза<span class="date" style="float: right">02.09.2018</span></a>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
 <li><a href="archive/other/comics_ghost.html">Привидение<span class="date" style="float: right">02.09.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a> <a href="/archive#q=YourDnDStories" class="tag c2">YourDnDStories</a></p></li>
+<li><a href="archive/other/comics_meduse.html">Медуза<span class="date" style="float: right">02.09.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a> <a href="/archive#q=YourDnDStories" class="tag c2">YourDnDStories</a></p></li>
+<li><a href="archive/other/comics_bees.html">Пчелы<span class="date" style="float: right">03.09.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a> <a href="/archive#q=YourDnDStories" class="tag c2">YourDnDStories</a></p></li>
+<li><a href="archive/other/comics_prince.html">Принц<span class="date" style="float: right">03.09.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a> <a href="/archive#q=YourDnDStories" class="tag c2">YourDnDStories</a></p></li>
+<li><a href="archive/other/comics_sacrifice.html">Жертвоприношение<span class="date" style="float: right">06.09.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a> <a href="/archive#q=YourDnDStories" class="tag c2">YourDnDStories</a></p></li>
+<li><a href="archive/other/zootopia.html">Мародеры и кролик<span class="date" style="float: right">06.09.2018</span></a>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a></p></li>
+<li><a href="archive/other/comics_crime.html">Совет<span class="date" style="float: right">11.09.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a> <a href="/archive#q=YourDnDStories" class="tag c2">YourDnDStories</a></p></li>
+<li><a href="archive/other/comics_pony.html">Пони<span class="date" style="float: right">20.09.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a> <a href="/archive#q=YourDnDStories" class="tag c2">YourDnDStories</a></p></li>
+<li><a href="archive/other/comics_insult.html">Обзывалки<span class="date" style="float: right">25.09.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a> <a href="/archive#q=YourDnDStories" class="tag c2">YourDnDStories</a></p></li>
+<li><a href="archive/other/uncoocked_hero.html">Недожарено<span class="date" style="float: right">03.10.2018</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Humor" class="tag c3">Humor</a> <a href="/archive#q=Comics" class="tag c6">Comics</a></p></li>
 </ul>
 </article></div>
+			<div class="show_print" id="page_url">
+				www.Tentaculus.ru
+			</div>
 			<div id="sidebar">		
 				<ul id="side_menu">
 					<li>
@@ -389,7 +408,7 @@
  </div>
  
   <script type="text/javascript" src="_js/jquery-m.js"></script><!-- jQuery -->
-  <script type="text/javascript" src="_js/script.js?v=0.4"></script><!-- your script -->
+  <script type="text/javascript" src="_js/script.js?v=0.41"></script><!-- your script -->
   <script type="text/javascript" src="_js/outer.js?v=0.11" async defer></script><!-- your script -->
   
  <!-- Yandex.Metrika counter -->
