--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"> 
   <meta name="description" content="Генераторы, рандомизаторы и прочие полезные инструменты для Настольных Ролевых Игр."> 
   <meta name="Keywords" content="Генераторы, заклинания, монстры, тавена, персонаж"> 
-  <link rel="stylesheet" type="text/css" href="_less/style.css?v=0.2">
+  <link rel="stylesheet" type="text/css" href="_less/style.css?v=0.3">
   <link href="_fonts/FortAwesome/css/font-awesome.min.css" rel="stylesheet">
   <!--link rel="shortcut icon" href="favicon.ico" /-->
   <link rel="canonical" href="https://tentaculus.ru/archive/">
@@ -180,7 +180,9 @@
 <br><span class="desc">Так как в игре скорее всего будет достаточно запланированных боевых столкновений, то в пути, кроме обычных стычек, стоит уделить внимание событиям, добавляющим глубины кампании. </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Road" class="tag c0">Road</a> <a href="/archive#q=Event" class="tag c4">Event</a> <a href="/archive#q=d12" class="tag c9">d12</a></p></li><li><a href="/archive/tables/tavern_encounters.html">События в таверне</a>
 <br><span class="desc">Сотня энкаунтеров для таверны. Лучше всего их использовать при подготовки игры, а не в самом процессе, потому что есть как минимум два вида. Либо события, когда группа уже сидит в таверне, либо события, которые происходят, когда приключенцы только входят в таверну. Некоторые события очень уж странные, но даже они могут подтолкнуть фантазию.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=dnd" class="tag c0">dnd</a> <a href="/archive#q=tavern" class="tag c6">tavern</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li></ul><h3>Места</h3><ul class="tagable noBullets"><li><a href="/archive/tables/dangerooms.html">Комнаты в данже</a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=dnd" class="tag c0">dnd</a> <a href="/archive#q=tavern" class="tag c6">tavern</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li><li><a href="/archive/tables/mountain_encounters.html">События в горах</a>
+<br><span class="desc">Сотня самых... мдэ... разнообразных и удивительных событий в горах.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=dnd" class="tag c0">dnd</a> <a href="/archive#q=encounters" class="tag c4">encounters</a> <a href="/archive#q=d100" class="tag c5">d100</a></p></li></ul><h3>Места</h3><ul class="tagable noBullets"><li><a href="/archive/tables/dangerooms.html">Комнаты в данже</a>
 <br><span class="desc">В подземельях не одни только коридоры со сквозняками да заросшие паутиной комнаты. Если хочется разнообразить очередной данж, вот d20 вариантов.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=DMGems" class="tag c1">DMGems</a> <a href="/archive#q=Fantasy" class="tag c6">Fantasy</a> <a href="/archive#q=History" class="tag c4">History</a> <a href="/archive#q=Dungeon" class="tag c0">Dungeon</a> <a href="/archive#q=places" class="tag c2">places</a> <a href="/archive#q=d20" class="tag c8">d20</a></p></li><li><a href="/archive/tables/tomb_ambient.html">Разнообразные гробницы</a>
 <br><span class="desc">Курган с могилой древнего воина, цитадель лича или склеп архимага, все они могут выглядеть по-разному. Традиционные d20 вариантов.</span>
@@ -222,7 +224,9 @@
 <br><span class="desc">Даже самые опытные бойцы могут допустить ошибку. Усталось, неожиданные события, неудобная местность, происки злых духов - все это может привести к тому, что даже отточенная до автоматизма атака пройдет не по плану. И в таком случае, может произойти много интересного или хотя бы внезапного.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=d100" class="tag c5">d100</a> <a href="/archive#q=battle" class="tag c6">battle</a> <a href="/archive#q=fail" class="tag c2">fail</a></p></li><li><a href="/archive/tables/carousing_effects.html">Хмельные напитки и эффекты последствий</a>
 <br><span class="desc">Таинственная фигура, закутанная в зеленый плащ, сидит за соседним столиком. Незнакомец достает бутылку с изумрудно зеленой искрящейся жидкостью и рассказывает, что удача сама найдет того, кто выпьет стакан этого напитка. Как только стаканы пустеют, а жидкость проглатывается, таинственная фигура исчезает и ее больше не видно. <br> В этой таблице d100 эффектов кутежа, есть как положительные эффекты, так и относительно полезные, и даже довольно бесполезные. Таинственные чары напитка работают 1d4 дней и в течение этого времени жизнь выпившего будет немного иной.</span>
-<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=d100" class="tag c5">d100</a> <a href="/archive#q=tavern" class="tag c6">tavern</a> <a href="/archive#q=effect" class="tag c1">effect</a></p></li></ul><h2 id="articles_section">Статьи</h2><img src="archive/img/archive_articles__300.jpg" srcset="archive/img/archive_articles__500.jpg 500w, archive/img/archive_articles__800.jpg 800w, archive/img/archive_articles.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=d100" class="tag c5">d100</a> <a href="/archive#q=tavern" class="tag c6">tavern</a> <a href="/archive#q=effect" class="tag c1">effect</a></p></li></ul><h3>Персонаж</h3><ul class="tagable noBullets"><li><a href="/archive/tables/char_relations.html">Связи</a>
+<br><span class="desc">Таблицы отношений и связей между персонажами.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=character" class="tag c1">character</a></p></li></ul><h2 id="articles_section">Статьи</h2><img src="archive/img/archive_articles__300.jpg" srcset="archive/img/archive_articles__500.jpg 500w, archive/img/archive_articles__800.jpg 800w, archive/img/archive_articles.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
 	<li><a href="archive/articles/End_batle_before_death.html">Альтернативные способы завершить битву<span class="date" style="float: right">28.07.2017</span></a>
 <br><span class="desc">
 Вольный перевод статьи о том, как завершить битву до того, как все истекут хитпоинтами.
@@ -279,6 +283,12 @@
 	<li><a href="archive/articles/Narrating_Combat_in_DnD.html">Описание битв в D&D<span class="date" style="float: right">09.01.2019</span></a>
 <br><span class="desc">Создать хорошее описание боевой сцены на лету непросто. Вот руководство с несколькими советами и уловками, с помощью которых можно сделать ваши битвы интереснее и драматичнее! Несмотря на то, что статья рассматривает бои в Dungeons and Dragons пятой редакции, советы применимы во многих других системах. </span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=DnD" class="tag c6">DnD</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Battle" class="tag c4">Battle</a></p></li>
+	<li><a href="archive/articles/Fate_Dungeons.html">Подземелья в Fate<span class="date" style="float: right">28.05.2019</span></a>
+<br><span class="desc">В первую очередь приключения в подземелье, конечно же, ассоциируются с Dundeon&Dragons, решениями свернуть направо или налево и долгими сражениями. Fate требует иного подхода и дает новый опыт, так как на первое место выходит история. Для начала рассмотрим сцены и сценарии. </span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Dungeon" class="tag c0">Dungeon</a></p></li>
+	<li><a href="archive/articles/Fate_Dungeons-Traps.html">Подземелья в Fate - Ловушки<span class="date" style="float: right">04.06.2019</span></a>
+<br><span class="desc">В играх ловушки обычно используются по нескольким причинам. Они подчеркивают опасность локации, дают информацию об обитателях, ослабляют персонажей еще до встречи с врагами или дают шанс персонажам продемонстрировать свои навыки. Но в Fate все немного иначе.</span>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Dungeon" class="tag c0">Dungeon</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
@@ -396,6 +406,16 @@
 				</div>
 				<div class="flex_footer flex_left">
 					<div class="padding" style="max-width: 26rem; margin: 0 auto">
+						<h4>Форум настольных ролевых игр</h4>
+						<a href="https://rpg-world.org/">Мир Ролевых Игр</a>
+					</div> 
+					
+					<div class="padding" style="max-width: 26rem; margin: 0 auto">
+						<h4>Блоги о настольных ролевых играх</h4>
+						<a href="https://imaginaria.ru/">Имажинария</a>
+					</div> 
+					
+					<div class="padding" style="max-width: 26rem; margin: 0 auto">
 						<h4>Карта ролевых клубов РФ и ближайших галактик</h4>
 						<a href="http://ролевыеклубы.рф"><i class="fa fa-map-marker"></i> РолевыеКлубы.рф</a>
 					</div> 
@@ -476,5 +496,6 @@
   <!-- ga('send', 'pageview'); -->
 
 <!-- </script> -->
+
 
 <script type="text/javascript" src="archive/js/archive.js"></script></body></html>
