--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
 	<li><a href="archive/articles/Fate_Dungeons-Traps.html">Подземелья в Fate - Ловушки<span class="date" style="float: right">04.06.2019</span></a>
 <br><span class="desc">В играх ловушки обычно используются по нескольким причинам. Они подчеркивают опасность локации, дают информацию об обитателях, ослабляют персонажей еще до встречи с врагами или дают шанс персонажам продемонстрировать свои навыки. Но в Fate все немного иначе.</span>
 <p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Dungeon" class="tag c0">Dungeon</a></p></li>
+	<li><a href="archive/articles/Fate_Dungeons-Secrets.html">Подземелья в Fate - Ловушки<span class="date" style="float: right">05.06.2019</span></a>
+<p class="taglist noRedString" style="margin-top: .1em"><a href="/archive#q=Fate" class="tag c4">Fate</a> <a href="/archive#q=Master" class="tag c0">Master</a> <a href="/archive#q=Advice" class="tag c8">Advice</a> <a href="/archive#q=Dungeon" class="tag c0">Dungeon</a></p></li>
 	</ul>
 	<h2 id="othes_section">Разное</h2>
 <img src="archive/img/archive_other__300.jpg" srcset="archive/img/archive_other__500.jpg 500w, archive/img/archive_other__800.jpg 800w, archive/img/archive_other.jpg 2000w" style="width: 100%" alt=""><ul class="tagable noBullets">
